                namespace to ease the transition.

Deprecation:
  * util-stats: Deprecate `com.twitter.finagle.stats.StatsReceiver#time{,TimeFuture}`.
                Instead, please use the `com.twitter.finagle.stats.Stat` helpers
                from scala, and the `com.twitter.finagle.stats.JStats` helpers
                from java.

API Changes:
  * util-core: Rename Buf._.Unsafe to Buf._.Owned and Buf._.Copied to Buf._.Shared
  * util-core: Remove the com.twitter.util.repository package

Java Compatibility:
  * util-app: Flaggable is now an abstract class for Java compatibility
  * util-core: Make Futures an API entry point for Java users
               (even for methods that take Scala collections)
  * util-core: Add compilation tests to track Java compatibility of new API


6.x

6.22.2  2014-10-29

  * util, finagle: add missing @RunWith annotation
  * Java tests for Duration, Time and Timer
  * util-core: remove Sieve example
  * Reader.writable.fail: make reentrant
  * util-app: add an option so that we can let apps fail fast if reading argument before args are parsed.
  * {finagle,util}-core: Slurry of PartialFunction micro-optimizations

API Changes:
  * util-core: Removed `Sieve` example.
  * util-core: Introduce new constructors and extractors for Buf types to
               support more efficient, correct uses.  Buf types now come with
               Copied and Direct management interfaces -- Direct tries to
               provide direct access to the Buf's backing byte array, while
               Copied ensures that the caller cannot accidentally mutate a Buf's
               data. Additionally, helpers to support Buf-type coersion have
               been added.

6.22.1  2014-10-23

Bug Fixes:
  * util and finagle: fix compiler warnings

Deprecation:
  * util-core: Add deprecation of RingBuffer to changelog
  * util-core: Removed IVar and IVarField 

Documentation:
  * util-core: Clarify Scaladoc of `Promise.attached`